# python-dash-example

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml  ruff.toml
assets/css/: style.css
assets/javascipt/: scripts.js
db/: connection.py  crud.py  database.py  fixture.py  model.py
db/data/: (GB) Sample - EU Superstore.xls  .~lock.(GB) Sample - EU Superstore.xls#
src/db/: connection.py  crud.py  fixture.py  model.py  schema.py
src/pages/: graph.py  landing.py  table.py
