[tool.poetry]
name = "python-dash-example"
version = "1.0.1"
description = "Python Dash Example with Bootstrap"
authors = ["Mohammed Rishad <mohammedrishad.vk@gmail.com>"]
readme = "README.md"
packages = [{include = "python_dash_example"}]

[tool.poetry.dependencies]
python = "^3.11"
dash = "2.17.1"
dash-bootstrap-components = "1.6.0"
pandas = "2.2.2"
xlrd = "2.0.1"
openpyxl = "3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
